--- a/404.html
+++ b/404.html
@@ -78,21 +78,18 @@
    <nav class="navbar navbar-top">
         <div class="container">
             <ul class="navbar-nav pull-left contact">
-                <li class="nav-item tel"><a href="tel:+447563582702">
+                <li class="nav-item tel"><a href="tel:0756 358 2702">
                 <i class="fa fa-mobile-phone"></i>
-                +44 756 358 2702
-                </a>
+                0756 358 2702                </a>
                 </li>
                 <li class="nav-item email">
                     <a href="mailto:rachael@tutorinterventions.co.uk">
                     <i class="fa fa-envelope-o"></i>
-                    rachael@tutorinterventions.co.uk
-                    </a>
+                    rachael@tutorinterventions.co.uk                    </a>
                 </li>
                 <li class="nav-item address">
                 <i class="fa fa-globe"></i>
-                Canterbury, Kent, United Kingdom
-                </li>
+                Leicester, United Kingdom                </li>
             </ul>
             <ul class="navbar-nav pull-right search">																		
                 <li class="nav-item">
@@ -187,7 +184,7 @@
                 <div class="widget">
                     <h4>Tutor Interventions</h4>
                     <p>
-                    Tutor Interventions in Kent helps your child succeed and thrive so that they can be all that they can.
+                    Tutor Interventions in Leicester helps your child succeed and thrive so that they can be all that they can.
                     </p>               
                 </div>
             </div>
@@ -195,10 +192,10 @@
                 <div class="widget">
                     <h4>Contacts</h4>
                     <ul class="contact-details">
-						<li class="address">Canterbury, Kent,United Kingdom</li>
-						<li class="telephone">+44 7 5635 82702</li>
-						<li class="email"><a href="mailto:  rachael@tutorinterventions.co.uk"> &nbsp;rachael@tutorinterventions.co.uk</a></li>
-						<li class="schedule">Mon — Sat: 9AM — 6PM</li>															
+						<li class="address">Leicester, United Kingdom</li>
+						<li class="telephone">0756 358 2702</li>
+						<li class="email"><a href="mailto:  "> &nbsp;rachael@tutorinterventions.co.uk</a></li>
+						<!--<li class="schedule">24-7</li>-->															
 			        </ul>              
                 </div>
             </div>
@@ -206,7 +203,7 @@
                 <div class="widget">
                     <h4>Tutor Interventions</h4>
                     <p>
-                    Tutor Interventions in Kent helps your child succeed and thrive so that they can be all that they can.
+                    Tutor Interventions in Leicester helps your child succeed and thrive so that they can be all that they can.
                     </p>               
                 </div>
             </div>
