--- a/about/index.html
+++ b/about/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Welcome to Tutor Interventions in Kent. I’m Rachael Dyer and I set up Tutor Interventions to provide tutoring services for pupils in and around the Canterbury, East Kent area. I have over 20 years experience teaching children with varying levels of Special Needs, including, but not limited to:  Attention Deficit ...">
+    <meta name="description" content="Welcome to Tutor Interventions in Leicester. I’m Rachael Dyer and I set up Tutor Interventions to provide tutoring services for pupils in and around the Leicester area. I have over 20 years experience teaching children with varying levels of Special Needs, including, but not limited to:  Attention Deficit Hyperactivity Disorder ...">
     <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="About Us">
-    <meta property="og:description" content="Welcome to Tutor Interventions in Kent. I’m Rachael Dyer and I set up Tutor Interventions to provide tutoring services for pupils in and around the Canterbury, East Kent area. I have over 20 years experience teaching children with varying levels of Special Needs, including, but not limited to:  Attention Deficit ...">
+    <meta property="og:description" content="Welcome to Tutor Interventions in Leicester. I’m Rachael Dyer and I set up Tutor Interventions to provide tutoring services for pupils in and around the Leicester area. I have over 20 years experience teaching children with varying levels of Special Needs, including, but not limited to:  Attention Deficit Hyperactivity Disorder ...">
     <meta property="og:image" content="/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/about">
     
@@ -78,21 +78,18 @@
    <nav class="navbar navbar-top">
         <div class="container">
             <ul class="navbar-nav pull-left contact">
-                <li class="nav-item tel"><a href="tel:+447563582702">
+                <li class="nav-item tel"><a href="tel:0756 358 2702">
                 <i class="fa fa-mobile-phone"></i>
-                +44 756 358 2702
-                </a>
+                0756 358 2702                </a>
                 </li>
                 <li class="nav-item email">
                     <a href="mailto:rachael@tutorinterventions.co.uk">
                     <i class="fa fa-envelope-o"></i>
-                    rachael@tutorinterventions.co.uk
-                    </a>
+                    rachael@tutorinterventions.co.uk                    </a>
                 </li>
                 <li class="nav-item address">
                 <i class="fa fa-globe"></i>
-                Canterbury, Kent, United Kingdom
-                </li>
+                Leicester, United Kingdom                </li>
             </ul>
             <ul class="navbar-nav pull-right search">																		
                 <li class="nav-item">
@@ -162,7 +159,7 @@
                         <h2>Rachael's Welcome</h2>
                         <div class="seperator left"></div>
                                                     <img src="/img/rachael-avatar.jpg" alt="Rachael Dyer" class="img-left">
-                                                <p>Welcome to Tutor Interventions in Kent. I’m Rachael Dyer and I set up Tutor Interventions to provide tutoring services for pupils in and around the Canterbury, East Kent area.</p>
+                                                <p>Welcome to Tutor Interventions in Leicester. I’m Rachael Dyer and I set up Tutor Interventions to provide tutoring services for pupils in and around the Leicester area.</p>
 <p>I have over 20 years experience teaching children with varying levels of Special Needs, including, but not limited to:</p>
 <ul>
 <li>Attention Deficit Hyperactivity Disorder (ADHD)</li>
@@ -176,7 +173,7 @@
 <p><strong>Tutoring can include the following tests and exam preparations:</strong></p>
 <ul>
 <li>Basic KS1, KS2 &amp; KS3 Skills</li>
-<li>SATS, 11+ (Kent Test)</li>
+<li>SATS, 11+</li>
 <li>Entry Level, Functional Skills</li>
 <li>GCSE, Technical Awards and ASDAN</li>
 </ul>
@@ -253,7 +250,7 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
                 <div class="widget">
                     <h4>Tutor Interventions</h4>
                     <p>
-                    Tutor Interventions in Kent helps your child succeed and thrive so that they can be all that they can.
+                    Tutor Interventions in Leicester helps your child succeed and thrive so that they can be all that they can.
                     </p>               
                 </div>
             </div>
@@ -261,10 +258,10 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
                 <div class="widget">
                     <h4>Contacts</h4>
                     <ul class="contact-details">
-						<li class="address">Canterbury, Kent,United Kingdom</li>
-						<li class="telephone">+44 7 5635 82702</li>
-						<li class="email"><a href="mailto:  rachael@tutorinterventions.co.uk"> &nbsp;rachael@tutorinterventions.co.uk</a></li>
-						<li class="schedule">Mon — Sat: 9AM — 6PM</li>															
+						<li class="address">Leicester, United Kingdom</li>
+						<li class="telephone">0756 358 2702</li>
+						<li class="email"><a href="mailto:  "> &nbsp;rachael@tutorinterventions.co.uk</a></li>
+						<!--<li class="schedule">24-7</li>-->															
 			        </ul>              
                 </div>
             </div>
@@ -272,7 +269,7 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
                 <div class="widget">
                     <h4>Tutor Interventions</h4>
                     <p>
-                    Tutor Interventions in Kent helps your child succeed and thrive so that they can be all that they can.
+                    Tutor Interventions in Leicester helps your child succeed and thrive so that they can be all that they can.
                     </p>               
                 </div>
             </div>
