--- a/contact/index.html
+++ b/contact/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Kent based tutor with 20 Years experience teaching children with varying levels of special needs">
+    <meta name="description" content="Leicester based tutor with 20 Years experience teaching children with varying levels of special needs">
     <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Contact">
-    <meta property="og:description" content="Kent based tutor with 20 Years experience teaching children with varying levels of special needs">
+    <meta property="og:description" content="Leicester based tutor with 20 Years experience teaching children with varying levels of special needs">
     <meta property="og:image" content="/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/contact">
     
@@ -59,7 +59,7 @@
 </script>
     <script>
         var map;
-        var centerLL =  {lat: 51.278191, lng: 1.0810};
+        var centerLL =  {lat: 52.5694, lng: -1.1693};
         function initMap() {
             map = new google.maps.Map(document.getElementById('map'), {
             center: centerLL,
@@ -99,21 +99,18 @@
    <nav class="navbar navbar-top">
         <div class="container">
             <ul class="navbar-nav pull-left contact">
-                <li class="nav-item tel"><a href="tel:+447563582702">
+                <li class="nav-item tel"><a href="tel:0756 358 2702">
                 <i class="fa fa-mobile-phone"></i>
-                +44 756 358 2702
-                </a>
+                0756 358 2702                </a>
                 </li>
                 <li class="nav-item email">
                     <a href="mailto:rachael@tutorinterventions.co.uk">
                     <i class="fa fa-envelope-o"></i>
-                    rachael@tutorinterventions.co.uk
-                    </a>
+                    rachael@tutorinterventions.co.uk                    </a>
                 </li>
                 <li class="nav-item address">
                 <i class="fa fa-globe"></i>
-                Canterbury, Kent, United Kingdom
-                </li>
+                Leicester, United Kingdom                </li>
             </ul>
             <ul class="navbar-nav pull-right search">																		
                 <li class="nav-item">
@@ -183,12 +180,12 @@
         <div class="map-contact">
         <ul class="contact-list">
             <li class="address">
-            <i class="fa fa-globe"></i>54 St Andrews Close, Canterbury, CT1 2RT</li>
+            <i class="fa fa-globe"></i>Blaby, Leicester, LE8 4DH</li>
             <li class="tel"><a href="tel:0756 358 2702">
             <i class="fa fa-mobile"></i>0756 358 2702</a></li>
             <li class="skype"><a href="skype:tutorinterventions?chat">
             <i class="fa fa-skype"></i>tutorinterventions</a></li>
-            <li class="email"><a href="mailto:rachael@tutorinterventions.co.uk">
+            <li class="email"><a href="mailto:">
             <i class="fa fa-envelope-o"></i>rachael@tutorinterventions.co.uk</a></li>
             <li>
             <ul class="socials-list">
@@ -260,14 +257,12 @@
                 For all questions and enquiries
                 <h4>Rachael Dyer</h4>
                 <ul>
-                    <li class="tel"><a href="tel:07563582702"><i class="fa fa-mobile-phone"></i>
-                        0756 358 2702
-                        </a>
+                    <li class="tel"><a href="tel:0756 358 2702"><i class="fa fa-mobile-phone"></i>
+                        0756 358 2702                        </a>
                     </li>
                     <li class="email">
                     <a href="mailto:rachael@tutorinterventions.co.uk"><i class="fa fa-envelope-o"></i>
-                    rachael@tutorinterventions.co.uk
-                    </a>
+                    rachael@tutorinterventions.co.uk                    </a>
                     </li>
                 </ul>
             </div>
@@ -284,7 +279,7 @@
                 <div class="widget">
                     <h4>Tutor Interventions</h4>
                     <p>
-                    Tutor Interventions in Kent helps your child succeed and thrive so that they can be all that they can.
+                    Tutor Interventions in Leicester helps your child succeed and thrive so that they can be all that they can.
                     </p>               
                 </div>
             </div>
@@ -292,10 +287,10 @@
                 <div class="widget">
                     <h4>Contacts</h4>
                     <ul class="contact-details">
-						<li class="address">Canterbury, Kent,United Kingdom</li>
-						<li class="telephone">+44 7 5635 82702</li>
-						<li class="email"><a href="mailto:  rachael@tutorinterventions.co.uk"> &nbsp;rachael@tutorinterventions.co.uk</a></li>
-						<li class="schedule">Mon — Sat: 9AM — 6PM</li>															
+						<li class="address">Leicester, United Kingdom</li>
+						<li class="telephone">0756 358 2702</li>
+						<li class="email"><a href="mailto:  "> &nbsp;rachael@tutorinterventions.co.uk</a></li>
+						<!--<li class="schedule">24-7</li>-->															
 			        </ul>              
                 </div>
             </div>
@@ -303,7 +298,7 @@
                 <div class="widget">
                     <h4>Tutor Interventions</h4>
                     <p>
-                    Tutor Interventions in Kent helps your child succeed and thrive so that they can be all that they can.
+                    Tutor Interventions in Leicester helps your child succeed and thrive so that they can be all that they can.
                     </p>               
                 </div>
             </div>
