--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Kent based tutor with 20 Years experience teaching children with varying levels of special needs">
+    <meta name="description" content="Leicester based tutor with 20 Years experience teaching children with varying levels of special needs">
     <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Tutor Interventions">
-    <meta property="og:description" content="Kent based tutor with 20 Years experience teaching children with varying levels of special needs">
+    <meta property="og:description" content="Leicester based tutor with 20 Years experience teaching children with varying levels of special needs">
     <meta property="og:image" content="/img/classmates-handsup.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/">
     
@@ -78,21 +78,18 @@
    <nav class="navbar navbar-top">
         <div class="container">
             <ul class="navbar-nav pull-left contact">
-                <li class="nav-item tel"><a href="tel:+447563582702">
+                <li class="nav-item tel"><a href="tel:0756 358 2702">
                 <i class="fa fa-mobile-phone"></i>
-                +44 756 358 2702
-                </a>
+                0756 358 2702                </a>
                 </li>
                 <li class="nav-item email">
                     <a href="mailto:rachael@tutorinterventions.co.uk">
                     <i class="fa fa-envelope-o"></i>
-                    rachael@tutorinterventions.co.uk
-                    </a>
+                    rachael@tutorinterventions.co.uk                    </a>
                 </li>
                 <li class="nav-item address">
                 <i class="fa fa-globe"></i>
-                Canterbury, Kent, United Kingdom
-                </li>
+                Leicester, United Kingdom                </li>
             </ul>
             <ul class="navbar-nav pull-right search">																		
                 <li class="nav-item">
@@ -142,7 +139,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-12 mx-auto">
-            <h1 class="mb-5">Kent Based Tutor With 20 Years Experience</h1>
+            <h1 class="mb-5">Leicester Based Tutor With 20 Years Experience</h1>
             <a class="btn btn-primary btn-blue" href="/request-tutor/">Request Tutor <span class="arrow">&gt;</span></a>
           </div>
         </div>
@@ -155,13 +152,16 @@
              <h2>Our Tutor Specialities</h2>
              <div class="seperator"></div>
              <p>
-             We specialise in students with special needs and can provide tutoring for the core subjects: English and Maths from Year 3 to Year 11.
+             We specialise in students with special needs and can provide tutoring for the core subjects: English and Maths from Year 3 to Year 11 (including GCSEs). Also 11+ exam preparation.
              </p>
              <p>
              We can also cover other subjects on request, including life skills and functional skills for Year 12 right through to adult education.
              </p>
              <p>
-             We are available evenings, weekends and during the school holidays.
+             We are available days and evenings, weekends and during the school holidays.
+             </p>
+            <p>
+             Available for home tuition or the more flexible online tuition.
              </p>
              <div class="img-wrapper">
                 <img src="/img/tutor-journey.png" alt="Tutor Journey">              
@@ -298,15 +298,14 @@
              <div class="row fees-list">
                 <div class="col-lg-6">
                     <ul>
-                    <li>1 hour session = £30</li>
-                    <li>2 hour session = £60</li>
-                    <li>3 hour session = £90</li>
+                    <li>Home tuition: £30 per hour</li>
+                    <li>Online tuition: £25 per hour</li>
                     </ul>
                 </div>
                 <div class="col-lg-6">
                     <ul>
-                    <li>5 advanced blocked sessions = £142.50 (5% discount)</li>
-                    <li>10 advanced blocked sessions = £270 (10% discount)</li>
+                    <li>5% discount when booking 5 sessions in advance.</li>
+                    <li>10% discount when booking 10 or more sessions in advance.</li>
                     </ul>
                 </div>
               </div>
@@ -325,7 +324,7 @@
                 <div class="widget">
                     <h4>Tutor Interventions</h4>
                     <p>
-                    Tutor Interventions in Kent helps your child succeed and thrive so that they can be all that they can.
+                    Tutor Interventions in Leicester helps your child succeed and thrive so that they can be all that they can.
                     </p>               
                 </div>
             </div>
@@ -333,10 +332,10 @@
                 <div class="widget">
                     <h4>Contacts</h4>
                     <ul class="contact-details">
-						<li class="address">Canterbury, Kent,United Kingdom</li>
-						<li class="telephone">+44 7 5635 82702</li>
-						<li class="email"><a href="mailto:  rachael@tutorinterventions.co.uk"> &nbsp;rachael@tutorinterventions.co.uk</a></li>
-						<li class="schedule">Mon — Sat: 9AM — 6PM</li>															
+						<li class="address">Leicester, United Kingdom</li>
+						<li class="telephone">0756 358 2702</li>
+						<li class="email"><a href="mailto:  "> &nbsp;rachael@tutorinterventions.co.uk</a></li>
+						<!--<li class="schedule">24-7</li>-->															
 			        </ul>              
                 </div>
             </div>
@@ -344,7 +343,7 @@
                 <div class="widget">
                     <h4>Tutor Interventions</h4>
                     <p>
-                    Tutor Interventions in Kent helps your child succeed and thrive so that they can be all that they can.
+                    Tutor Interventions in Leicester helps your child succeed and thrive so that they can be all that they can.
                     </p>               
                 </div>
             </div>
