front page changed

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Sorry but we couldn&#39;t find the page you are looking for. Please check to make sure you&#39;ve typed the URL correctly.  ">
-    <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
+    <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Page Not Found!">
     <meta property="og:description" content="Sorry but we couldn&#39;t find the page you are looking for. Please check to make sure you&#39;ve typed the URL correctly.  ">
