--- a/contact/index.html
+++ b/contact/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Leicester based tutor with 20 Years experience teaching children with varying levels of special needs">
-    <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
+    <meta name="description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
+    <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Contact">
-    <meta property="og:description" content="Leicester based tutor with 20 Years experience teaching children with varying levels of special needs">
+    <meta property="og:description" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
     <meta property="og:image" content="/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/contact">
     
