--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Leicester based tutor with 20 Years experience teaching children with varying levels of special needs">
-    <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
+    <meta name="description" content="Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs? ">
+    <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
-    <meta property="og:title" content="Tutor Interventions">
-    <meta property="og:description" content="Leicester based tutor with 20 Years experience teaching children with varying levels of special needs">
+    <meta property="og:title" content="Private Tutoring In Leicester By Tutor With 20 Years Experience">
+    <meta property="og:description" content="Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs? ">
     <meta property="og:image" content="/img/classmates-handsup.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/">
     
@@ -31,7 +31,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Tutor Interventions</title>
+    <title>Private Tutoring In Leicester By Tutor With 20 Years Experience | Tutor Interventions</title>
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -139,8 +139,15 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-12 mx-auto">
-            <h1 class="mb-5">Leicester Based Tutor With 20 Years Experience</h1>
-            <a class="btn btn-primary btn-blue" href="/request-tutor/">Request Tutor <span class="arrow">&gt;</span></a>
+            <h1 class="mb-5">Private Tutoring In Leicester By A Tutor With 20 Years Experience</h1>
+            <div class="intro-para">
+            <p>Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?</p>
+            <div class="contact-me">
+            Call me on <a href="tel:0756 358 2702">0756 358 2702</a><br>
+            Or contact us through our online form:
+            </div>
+            </div>
+            <a class="btn btn-primary btn-blue" href="/request-tutor/">Contact Us <span class="arrow">&gt;</span></a>
           </div>
         </div>
       </div>
