--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="This privacy policy sets out how Tutor Interventions uses and protects any information that you give Tutor Interventions when you use this website. Tutor Interventions is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using ...">
-    <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
+    <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Privacy Policy">
     <meta property="og:description" content="This privacy policy sets out how Tutor Interventions uses and protects any information that you give Tutor Interventions when you use this website. Tutor Interventions is committed to ensuring that your privacy is protected. Should we ask you to provide certain information by which you can be identified when using ...">
