--- a/search-results/index.html
+++ b/search-results/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="  ">
-    <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
+    <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Search Results">
     <meta property="og:description" content="  ">
