--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Welcome to our website. If you continue to browse and use this website, you are agreeing to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern Tutor Interventions’ relationship with you in relation to this website. If you disagree ...">
-    <meta name="keywords" content="Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
+    <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:title" content="Terms and Conditions">
     <meta property="og:description" content="Welcome to our website. If you continue to browse and use this website, you are agreeing to comply with and be bound by the following terms and conditions of use, which together with our privacy policy govern Tutor Interventions’ relationship with you in relation to this website. If you disagree ...">
