--- a/leicester-schools/index.html
+++ b/leicester-schools/index.html
@@ -39,7 +39,25 @@
     <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
-    <link href="/css/styles.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+
+    <link href="/css/global.css" rel="stylesheet">
+
+    <link href="/css/masthead.css" rel="stylesheet">
+    <link href="/css/showcase.css" rel="stylesheet">
+    <link href="/css/icons.css" rel="stylesheet">
+    <link href="/css/testimonials.css" rel="stylesheet">
+    <link href="/css/call-to-action.css" rel="stylesheet">
+
+
+    <link href="/css/nav.css" rel="stylesheet">
+    <link href="/css/footer.css" rel="stylesheet">
+    <link href="/css/ball-rolling.css" rel="stylesheet">
+    <link href="/css/page.css" rel="stylesheet">
+    <link href="/css/home.css" rel="stylesheet">
+    <link href="/css/search.css" rel="stylesheet">
+    <link href="/css/forms.css" rel="stylesheet">
+
 
      <link href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.12.1/bootstrap-table.min.css" rel="stylesheet">
      <link href="/css/map-icons.css" rel="stylesheet">
