--- a/leicester-schools/index.html
+++ b/leicester-schools/index.html
@@ -182,12 +182,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <article class="post tableview">
-                                                
-                       <div class="row">
-                        <div class="subtitle col-md-6 col-xl-9">This is the official government data for Leicester school expenditure. It shows the spend per pupil for each school.</div>
-                        <div class="subtitle col-md-6 col-xl-3"></div>
-                        </div>
-                        
+                                                <div class="subtitle">This is the official government data for Leicester school expenditure. It shows the spend per pupil for each school.</div>                                                
                         <div id="schools-table"></div>
                     </article>
                 </div>
