--- a/contact/index.html
+++ b/contact/index.html
@@ -144,7 +144,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
+                                        <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
@@ -153,7 +153,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/about/">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="/contact/">Contact</a>
                     </li>
                                     </ul>
