--- a/request-tutor/index.html
+++ b/request-tutor/index.html
@@ -116,10 +116,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item">
+                                        <li class="nav-item">
                         <a class="nav-link" href="/">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="/request-tutor/">Request Tutor</a>
                     </li>
                     <li class="nav-item">
