Minor text change

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs? ">
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
-    <meta property="og:title" content="Private Tutoring In Leicester By Tutor With 20 Years Experience">
+    <meta property="og:title" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
     <meta property="og:description" content="Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs? ">
     <meta property="og:image" content="/img/classmates-handsup.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/">
@@ -31,7 +31,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Private Tutoring In Leicester By Tutor With 20 Years Experience | Tutor Interventions</title>
+    <title>Private Tutoring In Leicester By A Tutor With 20 Years Experience | Tutor Interventions</title>
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
