--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,13 @@
     <meta property="og:description" content="Welcome to Tutor Interventions in Leicester. I’m Rachael Dyer and I set up Tutor Interventions to provide tutoring services for pupils in and around the Leicester area. I have over 20 years experience teaching children with varying levels of Special Needs, including, but not limited to:  Attention Deficit Hyperactivity Disorder ...">
     <meta property="og:image" content="/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/about">
-    
+
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:title" content="About Us">
+    <meta property="twitter:description" content="Welcome to Tutor Interventions in Leicester. I’m Rachael Dyer and I set up Tutor Interventions to provide tutoring services for pupils in and around the Leicester area. I have over 20 years experience teaching children with varying levels of Special Needs, including, but not limited to:  Attention Deficit Hyperactivity Disorder ...">
+    <meta property="twitter:image" content="/img/classmates-handsup-header.jpg">
+        <meta property="twitter:image:alt" content="Classmates handsup header">
+          
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
