--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <meta property="og:description" content="Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs? ">
     <meta property="og:image" content="/img/classmates-handsup.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/">
-    
+
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:title" content="Private Tutoring In Leicester By A Tutor With 20 Years Experience">
+    <meta property="twitter:description" content="Looking for a local private tutor for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs? ">
+    <meta property="twitter:image" content="/img/classmates-handsup.jpg">
+        <meta property="twitter:image:alt" content="Classmates handsup">
+          
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
