--- a/search-results/index.html
+++ b/search-results/index.html
@@ -11,7 +11,13 @@
     <meta property="og:description" content="  ">
     <meta property="og:image" content="/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/search-results">
-    
+
+    <meta property="twitter:card" content="summary">
+    <meta property="twitter:title" content="Search Results">
+    <meta property="twitter:description" content="  ">
+    <meta property="twitter:image" content="/img/classmates-handsup-header.jpg">
+        <meta property="twitter:image:alt" content="Classmates handsup header">
+          
     <link rel="icon" href="/favicon.ico">
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
